# pytauri

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  _typos.toml  commitlint.config.ts  mkdocs.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  release.py  tsconfig.base.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  docs_report.md  feature_request.yml
.github/actions/cache-pre-commit/: action.yml
.github/actions/setup-envs-ver/: action.yml
.github/actions/setup-sys-deps/: action.yml
.github/workflows/: docs.yml  lint-test.yml  publish-js.yml  publish-py.yml  publish-rs.yml
crates/pyfuture/: Cargo.toml
crates/pyfuture/src/: lib.rs  runner.rs
crates/pyfuture/src/future/: mod.rs  py.rs  rust.rs
crates/pyo3-utils/: CHANGELOG.md  Cargo.toml
crates/pyo3-utils/src/: lib.rs  py_match.rs  py_wrapper.rs  ungil.rs
crates/pytauri/: CHANGELOG.md  Cargo.toml
crates/pytauri-core/: CHANGELOG.md  Cargo.toml
crates/pytauri-core/src/: commands.rs  ipc.rs  lib.rs  tauri_runtime.rs  utils.rs
crates/pytauri-core/src/ext_mod_impl/: image.rs  ipc.rs  menu.rs  mod.rs  tray.rs  webview.rs  window.rs
crates/pytauri-plugin-notification/: CHANGELOG.md  Cargo.toml
crates/pytauri-plugin-notification/src/: ext_mod_impl.rs  lib.rs
crates/pytauri/src/: _append_ext_mod.py  _freeze.py  _post_init_pyi.py  lib.rs  pyembed.rs  standalone.rs
crates/tauri-plugin-pytauri/: CHANGELOG.md  Cargo.toml  api-iife.ts  build.rs  package.json  rollup.config.ts  tsconfig.json
crates/tauri-plugin-pytauri/guest-js/: CHANGELOG.md  package.json  rollup.config.ts  tsconfig.json
crates/tauri-plugin-pytauri/guest-js/src/: api-iife.ts  index.ts
crates/tauri-plugin-pytauri/permissions/: default.toml
crates/tauri-plugin-pytauri/permissions/autogenerated/: reference.md
crates/tauri-plugin-pytauri/permissions/autogenerated/commands/: pyfunc.toml
crates/tauri-plugin-pytauri/permissions/schemas/: schema.json
crates/tauri-plugin-pytauri/src/: commands.rs  gil_runtime.rs  lib.rs  pymod.rs
docs/: standalone.md
docs/CHANGELOG/js/: tauri-plugin-pytauri-api.md
docs/CHANGELOG/py/: codelldb.md  pyo3-utils.md  pytauri-plugin-notification.md  pytauri.md
docs/CHANGELOG/rs/: pyo3-utils.md  pytauri-core.md  pytauri-plugin-notification.md  pytauri.md  tauri-plugin-pytauri.md
docs/Usage/: standalone.md
docs/usage/concepts/: ipc.md
docs/usage/tutorial/: build-sdist.md  build-standalone.md  build-wheel.md  getting-started.md  index.md  py-js-ipc.md  using-plugins.md  using-pytauri.md
docs_src/tutorial/: cammand.ts  command.py  invoke_handler.py  plugin.py
example/: .gitignore  .taurignore  Cargo.toml  MANIFEST.in  Tauri.toml  Tauri.windows.standalone.json  Tauri.windows.toml  pyproject.toml  setup.py
example/capabilities/: default.toml
example/front/: package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
example/front/src/: App.tsx  ipc.tsx
example/python/pytauri_demo/: __init__.py  __main__.py
example/src/: lib.rs  main.rs
example/tauri-app/: README.md  vite.config.ts
example/tauri-app/src/: main.ts
example/tauri-app/src-tauri/: .gitignore  .taurignore  Cargo.toml  MANIFEST.in  pyproject.toml  setup.py  tauri.conf.json
example/tauri-app/src-tauri/python/tauri_app/: __init__.py  __main__.py
example/tauri-app/src-tauri/src/: lib.rs  main.rs
examples/nicegui-app/: .gitignore  Cargo.toml  README.md  pyproject.toml  setup.py  tauri.conf.json
examples/nicegui-app/icons/: README.md  icon.icns
examples/nicegui-app/python/nicegui_app/: __init__.py  __main__.py  _server.py  _tray_menu.py
examples/nicegui-app/src/: lib.rs  main.rs
examples/rustandpyinvoke-pixi-tauri-app/: README.md
examples/rustandpyinvoke-pixi-tauri-app/src-tauri/: pixi.toml  tauri.bundle.json
examples/rustandpyinvoke-pixi-tauri-app/src-tauri/python/tauri_app/: __init__.py
examples/rustandpyinvoke-pixi-tauri-app/src-tauri/src/: main.rs
examples/rustandpyinvoke-tauri-app/: README.md  package.json
examples/rustandpyinvoke-tauri-app/src/: main.ts
examples/rustandpyinvoke-tauri-app/src-tauri/: .gitignore  Cargo.toml  pyproject.toml
examples/rustandpyinvoke-tauri-app/src-tauri/python/tauri_app/: __init__.py  __init_fails__.py  __main__.py
examples/rustandpyinvoke-tauri-app/src-tauri/src/: lib.rs  main.rs
examples/tauri-app/: README.md  index.html  package.json  vite.config.ts
examples/tauri-app/src/: main.ts
examples/tauri-app/src-tauri/capabilities/: default.json
examples/tauri-app/src-tauri/python/tauri_app/: __init__.py
examples/tauri-app/src-tauri/src/: lib.rs  main.rs
python/codelldb/: CHANGELOG.md  pyproject.toml
python/codelldb/src/codelldb/: __init__.py
python/pyfuture/: pyproject.toml
python/pyfuture/src/pyfuture/: __init__.py
python/pyfuture/tests/: test_runner.py
python/pyo3-utils/: CHANGELOG.md  pyproject.toml
python/pyo3-utils/src/pyo3_utils/: __init__.py
python/pytauri/: CHANGELOG.md  pyproject.toml
python/pytauri-plugin-notification/: CHANGELOG.md  pyproject.toml
python/pytauri-plugin-notification/src/pytauri_plugin_notification/: __init__.py  ffi.py
python/pytauri/src/pytauri/: __init__.py  _ipc.py  debug.py  ffi.py  image.py  ipc.py  menu.py  tray.py  webview.py  window.py
python/pytauri/src/pytauri/_ipc/: __init__.py  _types.py
python/pytauri/src/pytauri/ffi/: __init__.py  _ext_mod.py  image.py  ipc.py  lib.py  menu.py  tray.py  webview.py  window.py
scripts/: README.md  docs-build.sh  python-fmt.sh  python-test.sh  python-verifytypes.sh
tests/pytauri-test/: Cargo.toml  pyproject.toml  tauri.conf.json
tests/pytauri-test/python/pytauri_test/: __init__.py
tests/pytauri-test/src/: lib.rs
tests/pytauri-test/tests/: ipc.rs
utils/: gen_ref_pages.py
