[workspace]
members = ["crates/*", "examples/tauri-app/src-tauri", "examples/nicegui-app"]
resolver = "2"


[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
rust-version = "1.81"
repository = "https://github.com/WSH032/pytauri/"
homepage = "https://github.com/WSH032/pytauri/"
authors = ["Sean Wang <126865849+WSH032@users.noreply.github.com>"]


[workspace.dependencies]
pyo3 = { version = "0.23" }
pyo3-build-config = { version = "0.23" }

tauri = { version = "2.2" }
tauri-build = { version = "2" }
tauri-plugin = { version = "2" }

tauri-plugin-notification = { version = "2" }

serde = { version = "1" }
serde_json = { version = "1" }

parking_lot = { version = "0.12" }
libc = { version = "0.2" }
dunce = { version = "1", default-features = false }

tokio = { version = "1", default-features = false }

tauri-plugin-pytauri = { path = "crates/tauri-plugin-pytauri", version = "0.1.0-beta.0" }
pytauri-core = { path = "crates/pytauri-core", version = "0.1.0-beta.1" }
pytauri = { path = "crates/pytauri", version = "0.1.0-beta.0" }
pytauri-plugin-notification = { path = "crates/pytauri-plugin-notification", version = "0.1.0-beta.0" }
pyo3-utils = { path = "crates/pyo3-utils", version = "0.1.0-beta.0" }

[profile.release]
lto = "thin"


# for standalone app bundle python example
[profile.bundle-dev]
inherits = "dev"

[profile.bundle-release]
inherits = "release"
