[project]
name = "pytauri-workspace"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.9"

[tool.uv]
dev-dependencies = [
    "setuptools>=64",    # 64 for `setuptools-rust`
    "setuptools-scm>=8",
    "setuptools-rust",
    # testing
    "pytest == 8.*",
    "anyio[trio] >= 4",
    # workspace members
    "pytauri-demo",
    "pyfuture",
]

[tool.uv.sources]
pytauri-demo = { workspace = true }
pyfuture = { workspace = true }

# https://docs.astral.sh/uv/concepts/workspaces/
[tool.uv.workspace]
members = ["python/*", "example"]

[tool.pyright]
typeCheckingMode = "strict"
pythonVersion = "3.9"
