[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8", "setuptools-rust"]
build-backend = "setuptools.build_meta"

[project]
name = "pytauri-demo"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]

dependencies = [
    "pydantic >= 2",
    "pydantic-core",          # `pydantic` will specify its version
    "typing-extensions >= 4",
    # workspace dependencies
    "pytauri",
    "pytauri-plugin-notification",
    "codelldb",
    "pyfuture"
]

[tool.uv.sources]
pytauri = { workspace = true }
pytauri-plugin-notification = { workspace = true }
codelldb = { workspace = true }
pyfuture = { workspace = true }

[tool.setuptools_scm]
# See: <https://setuptools-scm.readthedocs.io/en/stable/config/>
fallback_version = "0.1.0"
root = ".."                # The demo is sub-directory of the workspace, and `.git` is at `../.git`

[tool.setuptools.packages]
# Pure Python packages/modules
find = { where = ["python"] }
