[package]
name = "pyfuture"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
rust-version = { workspace = true }


[dependencies]
pyo3 = { workspace = true }

[dependencies.tokio]
workspace = true
default-features = false
optional = true


[features]
default = ["sync"]
sync = ["dep:tokio", "tokio?/sync"]
