[package]
name = "pyo3-utils"
version = "0.1.0-beta.0"
edition = { workspace = true }
license = { workspace = true }
rust-version = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
authors = { workspace = true }
description = "Utilities for PyO3"


[package.metadata.docs.rs]
# See: https://docs.rs/about/metadata
all-features = true
rustc-args = ["--cfg", "docsrs"]
rustdoc-args = ["--cfg", "docsrs"]


[dependencies]
pyo3 = { workspace = true }
parking_lot = { workspace = true }
