[package]
name = "pytauri-plugin-notification"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
rust-version = { workspace = true }

[dependencies]
tauri = { workspace = true }
tauri-plugin-notification = { workspace = true }

pytauri-core = { workspace = true }

pyo3 = { workspace = true }
pyo3-utils = { workspace = true }
