[package]
name = "pytauri-plugin-notification"
version = "0.1.0-beta.0"
edition = { workspace = true }
license = { workspace = true }
rust-version = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }

[dependencies]
tauri = { workspace = true }
tauri-plugin-notification = { workspace = true }

pyo3 = { workspace = true }

# workspace dependencies
pytauri-core = { workspace = true }
pyo3-utils = { workspace = true }
