[package]
name = "pytauri-plugin-notification"
version = "0.2.0"
edition = { workspace = true }
license = { workspace = true }
rust-version = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
authors = { workspace = true }
description = "tauri-plugin-notification binding for PyTauri"


[package.metadata.docs.rs]
# See: https://docs.rs/about/metadata
all-features = true
# NOTE: `--cfg docsrs` is necessary,
# otherwise some tauri dependencies will require linking to system libraries
# that are not available in the `docs.rs` environment.
rustc-args = ["--cfg", "docsrs"]
rustdoc-args = ["--cfg", "docsrs"]


[dependencies]
tauri = { workspace = true }
tauri-plugin-notification = { workspace = true }

pyo3 = { workspace = true }

# workspace dependencies
pytauri-core = { workspace = true }
pyo3-utils = { workspace = true }
