[package]
name = "pytauri"
version = "0.1.0-beta.0"
edition = { workspace = true }
license = { workspace = true }
rust-version = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
authors = { workspace = true }
description = "Tauri binding for Python through Pyo3"


[package.metadata.docs.rs]
# See: https://docs.rs/about/metadata
all-features = true
# NOTE: `--cfg docsrs` is necessary,
# otherwise some tauri dependencies will require linking to system libraries
# that are not available in the `docs.rs` environment.
rustc-args = ["--cfg", "docsrs"]
rustdoc-args = ["--cfg", "docsrs"]


[features]
standalone = ["dep:libc", "dep:dunce"]


[dependencies]
tauri = { workspace = true }
tauri-plugin-pytauri = { workspace = true }

pyo3 = { workspace = true }

libc = { workspace = true, optional = true }
dunce = { workspace = true, optional = true }

# workspace dependencies
pytauri-core = { workspace = true }
pyo3-utils = { workspace = true }
