[package]
name = "tauri-plugin-pytauri"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
rust-version = { workspace = true }
links = "tauri-plugin-pytauri"
include = [
    "/src/",
    "/build.rs",
    "/permissions/*.toml",
    "/guest-js/dist/api-iife.*.js",
]

[dependencies]
tauri = { workspace = true }

pyo3 = { workspace = true }
pytauri-core = { workspace = true }

tokio = { workspace = true, features = ["rt", "rt-multi-thread"] }

[build-dependencies]
tauri-plugin = { workspace = true }
pyo3-build-config = { workspace = true, features = ["resolve-config"] }
