[project]
name = "nicegui-app"
version = "0.1.0"
description = "Add your description here"
# Although we use the `match` feature of py310,
# we still keep `requires-python = ">=3.9"` here,
# otherwise it cannot be installed in the py39 CI job.
requires-python = ">=3.9"
dependencies = [
    "nicegui >= 2.9.1, < 3",
    "fastapi >= 0.115.6",
    "uvicorn >= 0.34",
    "pytauri == 0.1.*",
    "anyio == 4.*",
    "pytauri-plugin-notification == 0.1.*",
    "typing-extensions >= 4",
]

[project.entry-points.pytauri]
# - "nicegui_app" -> `python/nicegui_app/`
# - "ext_mod" -> `#[pyo3(name = "ext_mod")]` in rust
ext_mod = "nicegui_app.ext_mod"

[build-system]
requires = ["setuptools>=61", "setuptools-rust==1.*", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages]
find = { where = ["python"] }

# see: <https://www.maturin.rs/config>
[tool.maturin]
# the same as [tool.setuptools.packages.find.where]
python-source = "python"
# the same as `[project.entry-points.pytauri.ext_mod]`,
# i.e., `target` in `setup.py`
module-name = "nicegui_app.ext_mod"
# see `setup.py`
features = ["pyo3/extension-module", "tauri/custom-protocol", "pyo3/abi3-py39"]
# equivalent to `setuptools_scm`
sdist-generator = "git"


[tool.uv.sources]
pytauri = { workspace = true }
pytauri-plugin-notification = { workspace = true }
