[project]
name = "pyo3-utils"
version = "0.1.0-beta.1"
readme = "README.md"
license = "Apache-2.0"
authors = [
    { name = "Sean Wang", email = "126865849+WSH032@users.noreply.github.com" },
]
description = "Python integration for the pyo3-utils crate."
requires-python = ">=3.9"

# <https://iscinumpy.dev/post/bound-version-constraints/>
dependencies = ["typing-extensions >= 4"]

[project.urls]
# see: <https://packaging.python.org/en/latest/specifications/well-known-project-urls/#well-known-labels>
documentation = "https://wsh032.github.io/pytauri/"
source = "https://github.com/WSH032/pytauri"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
