[package]
name = "tauri-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[workspace]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
# `cdylib` is required for building python extension modules files
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
# the same as the package name
name = "tauri-app"
path = "src/main.rs"
required-features = ["pytauri/standalone"]


[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
env_logger = "0.10"
log = "0.4"

pyo3 = "0.23"
pytauri = { path = "../../../crates/pytauri" }
tauri-plugin-pytauri = { path = "../../../crates/tauri-plugin-pytauri" }
tauri-plugin-notification = "2"
pytauri-plugin-notification = { path = "../../../crates/pytauri-plugin-notification" }
